upgrades akka version from 2.6.20 to latest available 2.10.2 and adds extra test for serialization of scalapb generated baker messages.